<resources>
    <string name="app_name">Haku Bank</string>
    <string name="superadmin__code">Qkd4a1pRVjFBR1YzWkQ9PSNCR1JrQkdSa0JHUmtCR1JrQkdSa1pEPT0jcFQ5ZkJHUms=</string>
    <string name="admin__code">WkdSbFp3Wm1BUUQxQUQ9PSNaR1ZtQVFSbFptRGtad1owWkdWbUFOPT0jTEpFZ25KNGs=</string>
    <string name="root__code">Wm1Wa1pReDRCUXAyQUQ9PSNaUXg0QW1MMUFRWmxaR0wxQVFabFpEPT0jcHpJMlpReDQ=</string>
    <string name="sp__storage_id">hakubank_sp_storage</string>
    <string name="sp__account_number_id">account_number_id</string>
    <string name="sp__account_number_encoded_id">account_number_encoded_id</string>
    <string name="sp__card_number_id">card_number_id</string>
    <string name="sp__passcode_id">passcode_id</string>
    <string name="main_activity__root_alert_text">Root detected!</string>
    <string name="login_activity__login_label">Login</string>
    <string name="login_activity__passcode_hint">Passcode</string>
    <string name="login_activity__login_button_label">Login</string>
    <string name="login_activity__activate_button_label">Activate m-Banking</string>
    <string name="login_activity__activate_alert_text">You must register your bank account first using Activate m-Banking!</string>
    <string name="login_activity__wrong_passcode_alert_text">Wrong passcode!</string>
    <string name="activate_m_banking_activity__activate_label">Activate M-banking</string>
    <string name="activate_m_banking_activity__account_number_hint">Account Number</string>
    <string name="activate_m_banking_activity__card_number_hint">Card Number</string>
    <string name="activate_m_banking_activity__passcode_hint">Passcode</string>
    <string name="activate_m_banking_activity__activate_button_label">Activate</string>
    <string name="activate_m_banking_activity__account_number_length_alert_text">Your account number must be 10 digits!</string>
    <string name="activate_m_banking_activity__card_number_length_alert_text">Your card number must be 16 digits!</string>
    <string name="activate_m_banking_activity__passcode_length_alert_text">Your passcode must be 6 digits!</string>
    <string name="home_activity__account_balance_label">Account Balance</string>
    <string name="home_activity__transfer_label">Transfer</string>
    <string name="home_activity__change_passcode_label">Change Passcode</string>
    <string name="home_activity__logout_label">Logout</string>
    <string name="home_activity__check_balance_info_text">Balance: Rp. </string>
    <string name="home_activity__check_balance_positive_resp_text">OK</string>
    <string name="transfer_activity__transfer_label">Transfer to Another Account</string>
    <string name="transfer_activity__account_number_hint">Account Number</string>
    <string name="transfer_activity__transfer_amount_hint">Transfer Amount</string>
    <string name="transfer_activity__transfer_button_label">Transfer</string>
    <string name="transfer_activity__insufficient_balance_alert_text">Transfer amount cannot exceeds your account balance! Current balance: Rp. </string>
    <string name="transfer_activity__target_not_exist_alert_text">Account number does not exist!</string>
    <string name="transfer_activity__success_transfer_alert_text">Success transfer money!</string>
    <string name="change_passcode_activity__change_passcode_label">Change Passcode</string>
    <string name="change_passcode_activity__passcode_hint">Passcode</string>
    <string name="change_passcode_activity__change_button_label">Change</string>
    <string name="change_passcode_activity__passcode_length_alert_text">Your passcode must be 6 digits!</string>
</resources>