<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ActivateMBankingActivity">

    <TextView
        android:id="@+id/tv_activate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="256dp"
        android:text="@string/activate_m_banking_activity__activate_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="24sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        app:layout_constraintTop_toBottomOf="@id/tv_activate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center"
        android:orientation="vertical">

        <EditText
            android:id="@+id/et_account_number"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:hint="@string/activate_m_banking_activity__account_number_hint"
            android:textAlignment="center"
            android:inputType="number" />

        <EditText
            android:id="@+id/et_card_number"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:hint="@string/activate_m_banking_activity__card_number_hint"
            android:textAlignment="center"
            android:inputType="number" />

        <EditText
            android:id="@+id/et_passcode"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:hint="@string/activate_m_banking_activity__passcode_hint"
            android:textAlignment="center"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/btn_activate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activate_m_banking_activity__activate_button_label" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>