<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.TransferActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/transfer_activity__transfer_label"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/et_account_number"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:hint="@string/transfer_activity__account_number_hint"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/et_transfer_amount"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:hint="@string/transfer_activity__transfer_amount_hint"
            android:textAlignment="center"
            android:inputType="number" />

        <Button
            android:id="@+id/btn_transfer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/transfer_activity__transfer_button_label" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>