<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.HomeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="vertical"
        android:gravity="center">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/mcv_account_balance"
            android:layout_width="135dp"
            android:layout_height="wrap_content"
            android:clickable="true"
            app:cardBackgroundColor="@color/purple_700"
            android:padding="15dp"
            android:layout_marginVertical="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:orientation="vertical"
                android:gravity="center">

                <ImageView
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:src="@drawable/baseline_account_balance_wallet_24" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/home_activity__account_balance_label"
                    android:textColor="@color/white"
                    android:textAlignment="center"/>

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/mcv_transfer"
            android:layout_width="135dp"
            android:layout_height="wrap_content"
            android:clickable="true"
            app:cardBackgroundColor="@color/purple_700"
            android:padding="15dp"
            android:layout_marginVertical="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:orientation="vertical"
                android:gravity="center">

                <ImageView
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:src="@drawable/baseline_attach_money_24" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/home_activity__transfer_label"
                    android:textColor="@color/white"
                    android:textAlignment="center"/>

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/mcv_change_passcode"
            android:layout_width="135dp"
            android:layout_height="wrap_content"
            android:clickable="true"
            app:cardBackgroundColor="@color/purple_700"
            android:padding="15dp"
            android:layout_marginVertical="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:orientation="vertical"
                android:gravity="center">

                <ImageView
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:src="@drawable/baseline_password_24" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/home_activity__change_passcode_label"
                    android:textColor="@color/white"
                    android:textAlignment="center"/>

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/mcv_logout"
            android:layout_width="135dp"
            android:layout_height="wrap_content"
            android:clickable="true"
            app:cardBackgroundColor="@color/purple_700"
            android:padding="15dp"
            android:layout_marginVertical="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:orientation="vertical"
                android:gravity="center">

                <ImageView
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:src="@drawable/baseline_logout_24" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/home_activity__logout_label"
                    android:textColor="@color/white"
                    android:textAlignment="center"/>

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>